# ospice

./: CMakeLists.txt  Doxyfile  Makefile  My Simulator.kdev4  My_Simulator.kdevelop  My_Simulator.kdevelop.filelist  My_Simulator.kdevelop.pcs  My_Simulator.kdevses  ProjectHome.md  cmake_install.cmake  main.cpp  parser.l  parser.y
Doc/html/: Analysis_8h__dep__incl.md5  Capacitor_8cpp__incl.md5  Capacitor_8h__dep__incl.map  Circuit_8cpp.html  Circuit_8cpp__incl.map  Circuit_8cpp__incl.md5  Circuit_8h-source.html  Circuit_8h__dep__incl.map  Circuit_8h__dep__incl.md5  Circuit_8h__incl.map  Circuit_8h__incl.md5  Inductor_8cpp__incl.map  Inductor_8cpp__incl.md5  Inductor_8h.html  Inductor_8h__dep__incl.md5  Inductor_8h__incl.md5  Probes_8h-source.html  Probes_8h__dep__incl.md5  SourceFunc_8cpp.html  SourceFunc_8cpp__incl.map  SourceFunc_8cpp__incl.md5  SourceFunc_8h-source.html  SourceFunc_8h.html  SourceFunc_8h__dep__incl.md5  Source_8h.html  Source_8h__dep__incl.map  Source_8h__incl.md5  annotated.html  classAnalysis__inherit__graph.md5  classCapacitor__inherit__graph.md5  classCircuit-members.html  classCircuit.html  classCircuit__coll__graph.map  classCircuit__coll__graph.md5  classCurrentSource-members.html  classCurrentSource__coll__graph.map  classCurrentSource__coll__graph.md5  classCurrentSource__inherit__graph.map  classDC-members.html  classDCSource-members.html  (+50 more)
SuiteSparse/AMD/Demo/: amd_demo  amd_demo2  amd_simple
SuiteSparse/CAMD/Demo/: camd_demo  camd_demo2  camd_l_demo  camd_simple  my_camd_l_demo.out
SuiteSparse/CCOLAMD/Demo/: ccolamd_example  ccolamd_l_example
SuiteSparse/CHOLMOD/Demo/: cholmod_demo  cholmod_l_demo  cholmod_simple
SuiteSparse/COLAMD/Demo/: colamd_example  colamd_l_example
SuiteSparse/CSparse/Demo/: cs_demo1  cs_demo2
SuiteSparse/CXSparse/Demo/: cs_ci_demo2  cs_ci_demo3  cs_cl_demo1  cs_cl_demo2  cs_cl_demo3  cs_demo1  cs_demo2  cs_demo3  cs_di_demo1  cs_di_demo2  cs_di_demo3  cs_dl_demo2  cs_dl_demo3  cs_idemo  cs_ldemo
SuiteSparse/KLU/Demo/: klu_simple  kludemo  kluldemo
SuiteSparse/KLU/Include/: klu.h  klu_internal.h  klu_version.h
SuiteSparse/KLU/Lib/: DEADJOE  Makefile
SuiteSparse/LDL/Demo/: ldlamd  (+5 more)
SymbolicC++3-3.35/: Makefile  cmake_install.cmake
netlists/: Brambilla_tuned_amplifier.sp  rlc.sp
parser/: parser.y
src/: Analysis.cpp  Analysis.h  CMakeLists.txt  Capacitor.cpp  Capacitor.h  Circuit.cpp  Circuit.h  ControledSources.h  Inductor.cpp  Inductor.h  Makefile  Probes.cpp  Probes.h  ShuntingYard.cpp  ShuntingYard.cpp~  ShuntingYard.h  Source.cpp  Source.h  SourceFunc.cpp  SourceFunc.h  TwoTerminal.h~ (Case Conflict 1)  cmake_install.cmake  debug.h  element.h  plot.cc  plot.h  resistor.cpp  resistor.h  subcircuit.cpp  subcircuit.h
templates/: BMatrix.h  ComplexDense.h  ComplexSparse.h  DoubleDense.h  DoubleSparse.h  MatrixBase.h  Sparse.h
trunk/: CMakeLists.txt  Doxyfile  Doxygen.in  Makefile  My_Simulator.kdevelop  My_Simulator.kdevelop.pcs  My_Simulator.kdevses  cmake_install.cmake  main.cpp  parser.l  parser.y
trunk/Doc/html/: Analysis_8cpp.html  Analysis_8cpp__incl.map  Analysis_8cpp__incl.md5  Analysis_8h-source.html  Analysis_8h.html  Analysis_8h__dep__incl.map  Analysis_8h__incl.map  Analysis_8h__incl.md5  Capacitor_8cpp.html  Capacitor_8cpp__incl.map  Capacitor_8h-source.html  Capacitor_8h.html  Capacitor_8h__dep__incl.md5  Capacitor_8h__incl.map  Capacitor_8h__incl.md5  Circuit_8h.html  Inductor_8cpp.html  Inductor_8h-source.html  Inductor_8h__dep__incl.map  Inductor_8h__incl.map  Probes_8cpp.html  Probes_8cpp__incl.map  Probes_8cpp__incl.md5  Probes_8h.html  Probes_8h__dep__incl.map  Probes_8h__incl.map  Probes_8h__incl.md5  SourceFunc_8h__dep__incl.map  Source_8cpp.html  Source_8cpp__incl.map  Source_8cpp__incl.md5  Source_8h-source.html  Source_8h__dep__incl.md5  Source_8h__incl.map  classAnalysis-members.html  classAnalysis.html  classAnalysis__inherit__graph.map  classCapacitor-members.html  classCapacitor.html  classCurrentSource.html  (+65 more)
trunk/SuiteSparse/AMD/Demo/: amd_demo2  amd_l_demo  amd_simple  my_amd_l_demo.out
trunk/SuiteSparse/CAMD/Demo/: camd_demo  camd_demo2  camd_simple
trunk/SuiteSparse/CCOLAMD/Demo/: ccolamd_l_example
trunk/SuiteSparse/CHOLMOD/Demo/: cholmod_simple
trunk/SuiteSparse/COLAMD/Demo/: colamd_example  colamd_l_example
trunk/SuiteSparse/CSparse/Demo/: cs_demo1  cs_demo2  cs_demo3
trunk/SuiteSparse/CXSparse/Demo/: cs_ci_demo1  cs_ci_demo2  cs_ci_demo3  cs_cl_demo1  cs_cl_demo2  cs_demo1  cs_demo2  cs_demo3  cs_di_demo1  cs_di_demo3  cs_dl_demo1  cs_dl_demo2  cs_dl_demo3  cs_idemo  cs_ldemo
trunk/SuiteSparse/KLU/: Makefile
trunk/SuiteSparse/KLU/Demo/: klu_simple  kludemo  kluldemo
trunk/SuiteSparse/KLU/Include/: klu.h
trunk/SuiteSparse/KLU/Lib/: Makefile
trunk/SuiteSparse/KLU/Source/: klu_B_memory.c  klu_analyze_given.c  klu_factor.c  klu_kernel.c  klu_memory.c  klu_refactor.c  klu_scale.c  klu_solve.c  klu_sort.c  klu_tsolve.c
trunk/SuiteSparse/KLU/templates/: MWrap.h
trunk/SuiteSparse/LDL/Demo/: ldlamd  ldllamd  ldllmain  ldllsimple  ldlmain  ldlsimple  my_ldllamd.out  my_ldlmain.out
trunk/SuiteSparse/SPQR/Demo/: qrdemo  qrsimple  qrsimplec
trunk/SuiteSparse/UMFPACK/Demo/: my_umfpack_zl_demo.out  numeric.umf  symbolic.umf
trunk/SymbolicC++3-3.35/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/SymbolicC++3-3.35/include/symbolic/: constants.h
trunk/SymbolicC++3-3.35/src/: symbolic.cpp
trunk/cmake_modules/: FindBoost.cmake
trunk/netlists/: Brambilla_tuned_amplifier.sp  rlc.sp
trunk/parser/: parser.l
trunk/src/: Analysis.cpp  Analysis.h  CMakeLists.txt  Capacitor.cpp  Capacitor.h  Circuit.cpp  Circuit.h  ControledSources.cpp  ControledSources.h  Inductor.cpp  Inductor.h  Probes.cpp  Probes.h  ShuntingYard.cpp  ShuntingYard.h~  Source.cpp  Source.h  SourceFunc.h  config.h  debug.h  element.h  plot.h  resistor.cpp  resistor.h  subcircuit.cpp  subcircuit.h  twoterminal.cpp~ (Case Conflict 1)  util.h
trunk/templates/: BMatrix.h  ComplexDense.h  ComplexSparse.h  DefinedMatrices.h  DoubleDense.h  DoubleSparse.h  MatrixBase.h  Sparse.h
(+17 files in other folders)
